Sun Apr 13 12:49:33 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c: Remove DO_CHOWN define and simply use SECURE_MAN_UID.

Thu Apr 10 23:51:43 BST 2003  Byrial Ole Jensen  <byrial@image.dk>

	* po/da.po: Update from Translation Project.

Mon Apr  7 09:12:27 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/man.c (man): Call local_man_loop() straight away if name
	  contains a slash. Make the number of pages found an output
	  argument rather than the return value, so that we can include
	  local_man_loop()'s return behaviour.
	  (main): Update throughout for new man() signature. Don't call
	  local_man_loop() if man() returns an error, as man() now sorts
	  that out for itself.
	* src/man.h (man): Update prototype.

Mon Apr  7 08:09:08 BST 2003  Colin Watson  <cjwatson@debian.org>

	* include/Defines.in: Generate dependencies in .depend rather than
	  the current directory. Suppress echoing of dependency generation
	  commands.
	* libdb/Makefile.in: Remove .depend directory on distclean. Always
	  use dependencies (except on clean), not just when --enable-debug
	  was passed to configure.
	* src/Makefile.in: Likewise. Set up $(DEFS_*) variables so that the
	  correct flags are used when generating dependencies.
	* libdb/.cvsignore, src/.cvsignore: Ignore .depend.

	* configure.in: Remove now-redundant --enable-debug option. Remove
	  search for libefence if --enable-debug is used; using it with
	  LD_PRELOAD is generally more convenient anyway.
	* README, manual/intro.me (Arguments to configure): Remove
	  documentation for --enable-debug.
	* docs/NEWS: Document the removal.

Mon Apr  7 01:02:27 BST 2003  Colin Watson  <cjwatson@debian.org>

	* man/ja_JP.eucJP/man1/man.man1: Replace "%date%" with the Japanese
	  "ima", meaning "now" or "the present time" (thanks, Liyang Hu).

Mon Apr  7 00:04:30 BST 2003  Colin Watson  <cjwatson@debian.org>

	* configure.in: Don't generate language-specific date variants for